# rust_service_conventions

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: pull_request.yml  push_main.yml
examples/hello_idc/: main.rs  oidc.toml
examples/jwt_api/: jwt.toml  main.rs
examples/oidc_with_custom_claims/: main.rs
src/: jwt.rs  lib.rs  oidc.rs  tracing.rs  tracing_http.rs  tracing_json_fmt.rs
