[package]
name = "service_conventions"
version = "0.0.39"
edition = "2021"
description = "Conventions for services"
license = "Apache-2.0"
repository = "https://github.com/philipcristiano/rust_service_conventions"

[[example]]
name = "hello_idc"
test = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "grpc-tonic", "http-proto", "reqwest-rustls-webpki-roots", "tls", "tls-aws-lc"], optional = true }
opentelemetry-semantic-conventions = { version = "0.32.0", optional = true}
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio"], optional = true }
tonic = { version = "0.14", features = ["tls-webpki-roots"], optional = true}

tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "env-filter", "std", "registry"], optional = true }
tracing = { version = "0.1.40", optional = true}
tracing-opentelemetry = { version = "0.33.0", optional = true}

anyhow = {version = "1.0.82", optional = true}
once_cell = { version = "1.19.0", optional = true}
openidconnect = {version = "4.0.0", optional = true, features = ["accept-rfc3339-timestamps", "reqwest", "rustls-tls"]}
serde = { version = "1.0.200", features = ["derive"], optional = true }
serde_json = {version = "1.0.116", optional = true}
maud = { version="0.27.0", features = ["axum"], optional = true }
axum = { version = "0.8.0", optional = true, features = ["macros"]}
tower-cookies = { version = "0.11.0", features = ["signed", "private", "axum-core"], optional = true}
tower-http = { version = "0.6.0", features = ["tracing", "trace", "compression-gzip"], optional = true }

url = { version = "2.5.0", optional = true }
email_address = {version = "0.2.4", optional = true}
http = {version = "1.1.0", optional = true}
axum-core =   {version = "0.5.2", optional = true}
async-trait = {version = "0.1.80", optional = true}
redacted = {version = "0.2.0", optional = true}
chrono = {version = "0.4.38", optional = true}
thiserror = "2.0.0"
hmac = { version = "0.13.0", optional = true }
jwt = { version = "0.16.0", optional = true }
sha2 = { version = "0.10.0", optional = true }

[dev-dependencies]
# Dependencies used by examples and tests
tokio = { version = "1.37.0", features = ["full"]}
clap = { version = "4.5.4", features = ["derive", "env"]}
toml = "1.0.0"
reqwest = { version = "0.13.0", default_features = false, features = ["rustls", "json"]}
tower = { version = "0.5.2", features = ["full"]}
digest = { version = "0.11.2", features = ["mac"]}


[features]
all = ["jwt", "tracing", "oidc", "tracing-http"]
default = ["jwt", "tracing", "oidc", "tracing-http"]
jwt = ["dep:hmac", "dep:axum-core", "dep:jwt", "dep:sha2"]
tracing = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:tracing-subscriber", "dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry_sdk", "dep:tonic"]
oidc = ["dep:anyhow", "dep:chrono", "dep:once_cell", "dep:openidconnect", "dep:serde", "dep:serde_json", "dep:maud", "dep:axum", "dep:tower-cookies", "dep:url", "dep:email_address", "dep:http", "dep:async-trait", "dep:axum-core", "dep:redacted"]
tracing-http = ["tracing", "dep:http", "dep:tower-http"]
